--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,6 +22,11 @@
   </context-param>
   <context-param>
     <param-name>version</param-name>
-    <param-value>Version 1.9.1 - July 30, 2013</param-value>
+    <param-value>Version 2.0 - August 7, 2013</param-value>
+  </context-param>
+  <context-param>
+  	<description>Directory where this webapp is deployed (e.g. TOPS in www.lijour.net/TOPS/). It should contain "TOPS".</description>
+  	<param-name>deploy-dir</param-name>
+  	<param-value>TOPS</param-value>
   </context-param>
 </web-app>
